--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"graphql-tag": "^2.12.6",
 		"houdini": "^0.12.1",
 		"houdini-preprocess": "^0.12.2",
+		"node-fetch": "^3.2.1",
 		"prettier": "^2.5.1",
 		"prettier-plugin-svelte": "^2.5.0",
 		"svelte": "^3.44.0"
