--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 		"package": "svelte-kit package",
 		"preview": "svelte-kit preview",
 		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. .",
-		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
+		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
+		"generate": "houdini generate"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "next",
