--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
 		"graphql": "^16.3.0",
 		"graphql-relay": "^0.10.0",
 		"graphql-tag": "^2.12.6",
-		"houdini": "^0.12.1",
-		"houdini-preprocess": "^0.12.2",
+		"houdini": "^0.13.0-alpha.0",
+		"houdini-preprocess": "^0.13.0-alpha.0",
 		"node-fetch": "^3.2.1",
 		"prettier": "^2.5.1",
 		"prettier-plugin-svelte": "^2.5.0",
