--- a/package.json
+++ b/package.json
@@ -17,16 +17,19 @@
 		"@sveltejs/kit": "next",
 		"apollo-server": "^3.6.3",
 		"apollo-server-core": "^3.6.3",
+		"concurrently": "^7.0.0",
 		"graphql": "^16.3.0",
 		"graphql-relay": "^0.10.0",
 		"graphql-tag": "^2.12.6",
-		"houdini": "^0.13.0-alpha.0",
-		"houdini-preprocess": "^0.13.0-alpha.0",
+		"houdini": "^0.13.0-alpha.1",
+		"houdini-preprocess": "^0.13.0-alpha.1",
 		"node-fetch": "^3.2.1",
 		"prettier": "^2.5.1",
 		"prettier-plugin-svelte": "^2.5.0",
-		"svelte": "^3.44.0",
-		"concurrently": "^7.0.0"
+		"svelte": "^3.44.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"feather-icons": "^4.28.0"
+	}
 }
