--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
 		"apollo-server": "^3.6.3",
 		"apollo-server-core": "^3.6.3",
 		"concurrently": "^7.0.0",
-		"graphql": "^16.3.0",
+		"graphql": "15.5.0",
 		"graphql-relay": "^0.10.0",
 		"graphql-tag": "^2.12.6",
 		"houdini": "^0.13.0-alpha.5",
@@ -30,7 +30,14 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@graphql-tools/schema": "^8.3.2",
+		"apollo-server": "^2.24.0",
+		"subscriptions-transport-ws": "^0.9.18",
+		"express": "^4.17.3",
 		"feather-icons": "^4.28.0",
-		"houdini-common": "^0.13.0-alpha.2"
+		"graphql-subscriptions": "^2.0.0",
+		"graphql-ws": "^5.6.3",
+		"houdini-common": "^0.13.0-alpha.2",
+		"ws": "^8.5.0"
 	}
 }
