--- a/package.json
+++ b/package.json
@@ -26,18 +26,19 @@
 		"node-fetch": "^3.2.1",
 		"prettier": "^2.5.1",
 		"prettier-plugin-svelte": "^2.5.0",
-		"svelte": "^3.44.0"
+		"svelte": "^3.44.0",
+		"vite-plugin-replace": "^0.1.1"
 	},
 	"type": "module",
 	"dependencies": {
 		"@graphql-tools/schema": "^8.3.2",
 		"apollo-server": "^2.24.0",
-		"subscriptions-transport-ws": "^0.9.18",
 		"express": "^4.17.3",
 		"feather-icons": "^4.28.0",
 		"graphql-subscriptions": "^2.0.0",
 		"graphql-ws": "^5.6.3",
 		"houdini-common": "^0.13.0-alpha.2",
+		"subscriptions-transport-ws": "^0.9.18",
 		"ws": "^8.5.0"
 	}
 }
