--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
 		"graphql": "15.5.0",
 		"graphql-relay": "^0.10.0",
 		"graphql-tag": "^2.12.6",
-		"houdini": "^0.13.0-alpha.5",
-		"houdini-preprocess": "^0.13.0-alpha.4",
+		"houdini": "^0.14.7",
 		"node-fetch": "^3.2.1",
 		"prettier": "^2.5.1",
 		"prettier-plugin-svelte": "^2.5.0",
