--- a/package.json
+++ b/package.json
@@ -28,12 +28,12 @@
 		"prettier": "^2.5.1",
 		"prettier-plugin-svelte": "^2.5.0",
 		"svelte": "^3.44.0",
+		"vite": "^3.0.2",
 		"vite-plugin-replace": "^0.1.1"
 	},
 	"type": "module",
 	"dependencies": {
 		"@graphql-tools/schema": "^8.3.2",
-		"apollo-server": "^2.24.0",
 		"express": "^4.17.3",
 		"feather-icons": "^4.28.0",
 		"graphql-subscriptions": "^2.0.0",
