--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
 	"name": "houdini-intro",
-	"version": "0.0.1",
+	"version": "0.0.2",
 	"scripts": {
 		"server": "node api.cjs",
-		"web": "svelte-kit dev",
-		"build": "svelte-kit build",
-		"package": "svelte-kit package",
-		"preview": "svelte-kit preview",
+		"web": "vite",
+		"build": "vite build",
+		"package": "vite package",
+		"preview": "vite preview",
 		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. .",
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
 		"generate": "houdini generate",
