--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
 	"name": "houdini-intro",
-	"version": "0.0.1",
+	"version": "0.0.2",
 	"scripts": {
 		"server": "node api.cjs",
-		"web": "svelte-kit dev",
-		"build": "svelte-kit build",
-		"package": "svelte-kit package",
-		"preview": "svelte-kit preview",
+		"web": "vite",
+		"build": "vite build",
+		"package": "vite package",
+		"preview": "vite preview",
 		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. .",
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
 		"generate": "houdini generate",
@@ -28,12 +28,12 @@
 		"prettier": "^2.5.1",
 		"prettier-plugin-svelte": "^2.5.0",
 		"svelte": "^3.44.0",
+		"vite": "^3.0.2",
 		"vite-plugin-replace": "^0.1.1"
 	},
 	"type": "module",
 	"dependencies": {
 		"@graphql-tools/schema": "^8.3.2",
-		"apollo-server": "^2.24.0",
 		"express": "^4.17.3",
 		"feather-icons": "^4.28.0",
 		"graphql-subscriptions": "^2.0.0",
