--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
 		"generate": "houdini generate",
 		"dev": "concurrently \"npm run web\" \"npm run server\""
 	},
-	"devDependencies": {
+	"type": "module",
+	"dependencies": {
 		"@kitql/vite-plugin-watch-and-run": "^0.4.2",
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "next",
 		"apollo-server": "^3.6.3",
 		"apollo-server-core": "^3.6.3",
 		"concurrently": "^7.0.0",
-		"graphql": "15.5.0",
+		"graphql": "15.7.2",
 		"graphql-relay": "^0.10.0",
 		"graphql-tag": "^2.12.6",
 		"houdini": "^0.14.7",
@@ -27,18 +28,10 @@
 		"prettier": "^2.5.1",
 		"prettier-plugin-svelte": "^2.5.0",
 		"svelte": "^3.44.0",
-		"vite-plugin-replace": "^0.1.1"
-	},
-	"type": "module",
-	"dependencies": {
+		"vite-plugin-replace": "^0.1.1",
 		"@graphql-tools/schema": "^8.3.2",
-		"apollo-server": "^2.24.0",
 		"express": "^4.17.3",
 		"feather-icons": "^4.28.0",
-		"graphql-subscriptions": "^2.0.0",
-		"graphql-ws": "^5.6.3",
-		"houdini-common": "^0.13.0-alpha.2",
-		"subscriptions-transport-ws": "^0.9.18",
-		"ws": "^8.5.0"
+		"vite": "^3.1.4"
 	}
 }
