--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
 	"version": "0.0.1",
 	"scripts": {
 		"server": "node api.cjs",
-		"web": "svelte-kit dev",
-		"build": "svelte-kit build",
-		"package": "svelte-kit package",
-		"preview": "svelte-kit preview",
+		"web": "vite dev",
+		"build": "vite build",
+		"package": "vite package",
+		"preview": "vite preview",
 		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. .",
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
 		"generate": "houdini generate",
@@ -14,25 +14,25 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@kitql/vite-plugin-watch-and-run": "^0.4.2",
+		"@graphql-tools/schema": "^8.3.2",
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "next",
 		"apollo-server": "^3.6.3",
 		"apollo-server-core": "^3.6.3",
-		"concurrently": "^7.0.0",
+		"concurrently": "^7.5.0",
+		"express": "^4.17.3",
+		"feather-icons": "^4.28.0",
 		"graphql": "15.7.2",
-		"graphql-relay": "^0.10.0",
+		"graphql-relay": "^0.9.0",
+		"graphql-subscriptions": "^2.0.0",
 		"graphql-tag": "^2.12.6",
-		"houdini": "^0.17.0",
-		"houdini-svelte": "^0.17.0",
+		"houdini": "^0.17.5",
+		"houdini-svelte": "^0.17.5",
 		"node-fetch": "^3.2.1",
 		"prettier": "^2.5.1",
 		"prettier-plugin-svelte": "^2.5.0",
+		"subscriptions-transport-ws": "^0.11.0",
 		"svelte": "^3.44.0",
-		"vite-plugin-replace": "^0.1.1",
-		"@graphql-tools/schema": "^8.3.2",
-		"express": "^4.17.3",
-		"feather-icons": "^4.28.0",
 		"vite": "^3.1.4"
 	}
 }
