--- a/package.json
+++ b/package.json
@@ -3,15 +3,13 @@
 	"version": "0.0.1",
 	"type": "module",
 	"scripts": {
-		"server": "node server/api.js",
-		"web": "vite dev",
+		"dev": "vite dev",
 		"build": "vite build",
 		"package": "vite package",
 		"preview": "vite preview",
 		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. .",
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
-		"generate": "houdini generate",
-		"dev": "concurrently \"npm run web\" \"npm run server\""
+		"generate": "houdini generate"
 	},
 	"dependencies": {
 		"@graphql-tools/schema": "^8.3.2",
