--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
 		"graphql-subscriptions": "^2.0.0",
 		"graphql-tag": "^2.12.6",
 		"graphql-yoga": "^3.5.1",
-		"houdini": "^1.0.0-next.15",
-		"houdini-svelte": "^1.0.0-next.15",
+		"houdini": "1.0.0-next.16",
+		"houdini-svelte": "1.0.0-next.16",
 		"node-fetch": "^3.2.1",
 		"prettier": "^2.5.1",
 		"prettier-plugin-svelte": "^2.5.0",
