--- a/package.json
+++ b/package.json
@@ -1,38 +1,44 @@
 {
 	"name": "houdini-intro",
 	"version": "0.0.1",
+	"type": "module",
 	"scripts": {
-		"server": "node api.cjs",
-		"web": "vite dev",
+		"dev": "vite dev",
 		"build": "vite build",
 		"package": "vite package",
 		"preview": "vite preview",
 		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. .",
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
-		"generate": "houdini generate",
-		"dev": "concurrently \"npm run web\" \"npm run server\""
+		"generate": "houdini generate"
 	},
-	"type": "module",
 	"dependencies": {
 		"@graphql-tools/schema": "^8.3.2",
-		"@sveltejs/adapter-auto": "next",
-		"@sveltejs/kit": "next",
+		"@kitql/vite-plugin-watch-and-run": "^0.4.2",
+		"@sveltejs/adapter-auto": "^1.0.0",
+		"@sveltejs/adapter-cloudflare": "^1.0.0",
+		"@sveltejs/adapter-cloudflare-workers": "^1.0.6",
+		"@sveltejs/kit": "^1.3.0",
 		"apollo-server": "^3.6.3",
 		"apollo-server-core": "^3.6.3",
-		"concurrently": "^7.5.0",
+		"concurrently": "^7.0.0",
 		"express": "^4.17.3",
 		"feather-icons": "^4.28.0",
-		"graphql": "15.8.0",
-		"graphql-relay": "^0.9.0",
+		"graphql": "^15.8.0",
 		"graphql-subscriptions": "^2.0.0",
 		"graphql-tag": "^2.12.6",
-		"houdini": "^0.20.4",
-		"houdini-svelte": "^0.20.4",
-		"node-fetch": "^3.3.0",
-		"prettier": "^2.8.1",
-		"prettier-plugin-svelte": "^2.9.0",
-		"subscriptions-transport-ws": "^0.11.0",
-		"svelte": "^3.55.0",
-		"vite": "^4.0.1"
+		"graphql-yoga": "^3.5.1",
+		"houdini": "^1.0.0",
+		"houdini-svelte": "^1.0.0",
+		"node-fetch": "^3.2.1",
+		"prettier": "^2.5.1",
+		"prettier-plugin-svelte": "^2.5.0",
+		"svelte": "^3.44.0",
+		"svelte-preprocess": "^5.0.1",
+		"typescript": "^4.9.5",
+		"vite": "^4.1.0"
+	},
+	"devDependencies": {
+		"@cloudflare/workers-types": "^4.20230115.0",
+		"wrangler": "^2.9.0"
 	}
 }
