--- a/package.json
+++ b/package.json
@@ -7,13 +7,11 @@
 		"build": "vite build",
 		"package": "vite package",
 		"preview": "vite preview",
-		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. .",
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
-		"generate": "houdini generate"
+		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. ."
 	},
-	"dependencies": {
-		"@graphql-tools/schema": "^8.3.2",
-		"@kitql/vite-plugin-watch-and-run": "^0.4.2",
+	"devDependencies": {
+		"@cloudflare/workers-types": "^4.20230115.0",
 		"@sveltejs/adapter-auto": "^1.0.0",
 		"@sveltejs/adapter-cloudflare": "^1.0.0",
 		"@sveltejs/adapter-cloudflare-workers": "^1.0.6",
@@ -27,18 +25,15 @@
 		"graphql-subscriptions": "^2.0.0",
 		"graphql-tag": "^2.12.6",
 		"graphql-yoga": "^3.5.1",
-		"houdini": "^1.0.0",
-		"houdini-svelte": "^1.0.0",
+		"houdini": "^1.1.4",
+		"houdini-svelte": "^1.1.4",
 		"node-fetch": "^3.2.1",
 		"prettier": "^2.5.1",
 		"prettier-plugin-svelte": "^2.5.0",
 		"svelte": "^3.44.0",
 		"svelte-preprocess": "^5.0.1",
 		"typescript": "^4.9.5",
-		"vite": "^4.1.0"
-	},
-	"devDependencies": {
-		"@cloudflare/workers-types": "^4.20230115.0",
+		"vite": "^4.2.1",
 		"wrangler": "^2.9.0"
 	}
 }
